@@ -70,7 +70,7 @@ test = function(num,x,y=NULL,error,warning,output) {
         if (isTRUE(as.vector(x))) return()  # as.vector to drop names of a named vector such as returned by system.time
         cat("Test",num,"expected TRUE (y is missing) but observed:\n")
         if (is.data.table(x)) {
-            print(head(x,2));print(tail(x,2))
+            print(x,topn=2)
             cat("Key: ",paste(key(x),collapse=","),"\n")
             cat("Types: ",paste(sapply(x,class),collapse=","),"\n")
         } else print(x)
@@ -101,12 +101,12 @@ test = function(num,x,y=NULL,error,warning,output) {
     }
     cat("Test",num,"ran without errors but failed check:\n")
     if (is.data.table(x)) {
-        print(head(x,2));print(tail(x,2))
+        print(x,topn=2)
         cat("Key: ",paste(key(x),collapse=","),"\n")
         cat("Types: ",paste(sapply(x,class),collapse=","),"\n")
     } else print(x)
     if (is.data.table(y)) {
-        print(head(y,2));print(tail(y,2))
+        print(y,topn=2)
         cat("Key: ",paste(key(y),collapse=","),"\n")
         cat("Types: ",paste(sapply(y,class),collapse=","),"\n")
     } else print(y)
@@ -2013,8 +2013,8 @@ test(713, DT[,y:=5], data.table(x=1:5,y=5))
 setnames(DT,c("A","B"))
 test(714, DT[,z:=6:10], data.table(A=1:5,B=5,z=6:10))
 
-# Test J alias (now deprecated) issued warning from v1.8.3
-test(715, J(a=1:3,b=4), data.table(a=1:3,b=4), warning="deprecated [*]outside[*] DT")
+# Test J alias is now removed outside DT[...] from v1.8.7 (to resolve rJava::J conflict)
+test(715, J(a=1:3,b=4), data.table(a=1:3,b=4), error="could not find function.*J")
 
 # Test get in j
 DT = data.table(a=1:3,b=4:6)
